{
  "version": 4,
  "terraform_version": "0.13.1",
  "serial": 277,
  "lineage": "56daa57b-4034-f886-b451-d6478b81fae9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-ngw-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0a96edbec61ff3f3d",
            "public_dns": "ec2-52-22-149-137.compute-1.amazonaws.com",
            "public_ip": "52.22.149.137",
            "public_ipv4_pool": "amazon",
            "tags": {
              "created_by": "john",
              "environment": "test"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0c832c30627e5ff97",
            "public_dns": "ec2-107-20-208-56.compute-1.amazonaws.com",
            "public_ip": "107.20.208.56",
            "public_ipv4_pool": "amazon",
            "tags": {
              "created_by": "john",
              "environment": "test"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:internet-gateway/igw-0a2453f2cb5f93f6d",
            "id": "igw-0a2453f2cb5f93f6d",
            "owner_id": "535518648590",
            "tags": {
              "Name": "test-igw"
            },
            "vpc_id": "vpc-0db237ec574ea3562"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a96edbec61ff3f3d",
            "id": "nat-0c94c63c4e96ba1bb",
            "network_interface_id": "eni-021e4951d001f5192",
            "private_ip": "10.0.0.10",
            "public_ip": "52.22.149.137",
            "subnet_id": "subnet-0d5c53fff075032bb",
            "tags": {
              "Name": "test-ngw-0",
              "created_by": "john",
              "environment": "test"
            }
          },
          "dependencies": [
            "aws_eip.nat-ngw-eip",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.avz"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c832c30627e5ff97",
            "id": "nat-052546587d2ba3e93",
            "network_interface_id": "eni-03a5d6b85d975b1ef",
            "private_ip": "10.0.7.21",
            "public_ip": "107.20.208.56",
            "subnet_id": "subnet-0ce4f57fd2d854222",
            "tags": {
              "Name": "test-ngw-1",
              "created_by": "john",
              "environment": "test"
            }
          },
          "dependencies": [
            "aws_eip.nat-ngw-eip",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.avz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_backend_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02140556a06b3b7601080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c94c63c4e96ba1bb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02140556a06b3b760",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat-ngw-eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.eks",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.avz"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07f3bcb63121932211080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-052546587d2ba3e93",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07f3bcb6312193221",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat-ngw-eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.eks",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.avz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_to_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a2453f2cb5f93f6d",
            "id": "r-rtb-0dbe6abad232dc6751080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dbe6abad232dc675",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.app_vpc_igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02140556a06b3b760",
            "owner_id": "535518648590",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-rt-eks-us-east-1a"
            },
            "vpc_id": "vpc-0db237ec574ea3562"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.avz"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07f3bcb6312193221",
            "owner_id": "535518648590",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-rt-eks-us-east-1b"
            },
            "vpc_id": "vpc-0db237ec574ea3562"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.avz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dbe6abad232dc675",
            "owner_id": "535518648590",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-rt-public"
            },
            "vpc_id": "vpc-0db237ec574ea3562"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bd903a160f65a03",
            "route_table_id": "rtb-02140556a06b3b760",
            "subnet_id": "subnet-0335cc8c74dd8cabe"
          },
          "dependencies": [
            "aws_route_table.eks",
            "aws_subnet.eks_internal_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.avz"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1f03b4bd4c65c05",
            "route_table_id": "rtb-07f3bcb6312193221",
            "subnet_id": "subnet-0d1e3d3bd12edb8a9"
          },
          "dependencies": [
            "aws_route_table.eks",
            "aws_subnet.eks_internal_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.avz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074f51d3b766fd578",
            "route_table_id": "rtb-0dbe6abad232dc675",
            "subnet_id": "subnet-0d5c53fff075032bb"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.avz"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfd25fdc999dcb0c",
            "route_table_id": "rtb-0dbe6abad232dc675",
            "subnet_id": "subnet-0ce4f57fd2d854222"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.avz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_internal_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:subnet/subnet-0335cc8c74dd8cabe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.28.0/22",
            "id": "subnet-0335cc8c74dd8cabe",
            "map_public_ip_on_launch": false,
            "owner_id": "535518648590",
            "tags": {
              "Name": "test-internal-subnet-us-east-1a",
              "kubernetes.io/cluster/john": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0db237ec574ea3562"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.avz"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:subnet/subnet-0d1e3d3bd12edb8a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/22",
            "id": "subnet-0d1e3d3bd12edb8a9",
            "map_public_ip_on_launch": false,
            "owner_id": "535518648590",
            "tags": {
              "Name": "test-internal-subnet-us-east-1b",
              "kubernetes.io/cluster/john": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0db237ec574ea3562"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.avz"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:subnet/subnet-0d5c53fff075032bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/22",
            "id": "subnet-0d5c53fff075032bb",
            "map_public_ip_on_launch": false,
            "owner_id": "535518648590",
            "tags": {
              "Name": "test-public-subnet-us-east-1a",
              "kubernetes.io/cluster/john": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0db237ec574ea3562"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.avz"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:subnet/subnet-0ce4f57fd2d854222",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/22",
            "id": "subnet-0ce4f57fd2d854222",
            "map_public_ip_on_launch": false,
            "owner_id": "535518648590",
            "tags": {
              "Name": "test-public-subnet-us-east-1b",
              "kubernetes.io/cluster/john": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0db237ec574ea3562"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.avz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:vpc/vpc-0db237ec574ea3562",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f9b53ef2ead5c733",
            "default_route_table_id": "rtb-0e9649304dd165172",
            "default_security_group_id": "sg-0dfd6247dd8a0ba7d",
            "dhcp_options_id": "dopt-bbec06de",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0db237ec574ea3562",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e9649304dd165172",
            "owner_id": "535518648590",
            "tags": {
              "Name": "test-vpc",
              "created_by": "john",
              "environment": "test",
              "kubernetes.io/cluster/john": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:security-group/sg-0ba6669926da3217b",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0ba6669926da3217b",
            "ingress": [],
            "name": "john20201002040645699000000004",
            "name_prefix": "john",
            "owner_id": "535518648590",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "john-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db237ec574ea3562"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:security-group/sg-0febec9ff54da1093",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0febec9ff54da1093",
            "ingress": [],
            "name": "john20201002040645950300000005",
            "name_prefix": "john",
            "owner_id": "535518648590",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "john-eks_worker_sg",
              "kubernetes.io/cluster/john": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db237ec574ea3562"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-3655810886",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ba6669926da3217b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-3819385468",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ba6669926da3217b",
            "self": false,
            "source_security_group_id": "sg-0febec9ff54da1093",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-981751292",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0febec9ff54da1093",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-3792185963",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0febec9ff54da1093",
            "self": false,
            "source_security_group_id": "sg-0ba6669926da3217b",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-3890089454",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0febec9ff54da1093",
            "self": false,
            "source_security_group_id": "sg-0ba6669926da3217b",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-51440782",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0febec9ff54da1093",
            "self": false,
            "source_security_group_id": "sg-0febec9ff54da1093",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}